<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.HashRetrievingActivity">

    <TextView
        android:id="@+id/txtHashResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:padding="4sp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtEmailResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:padding="4sp"
        android:text=""
        android:layout_below="@id/txtHashResult"
        android:textColor="@color/dark_blue"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressLoading"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="407dp"
        android:visibility="invisible"
        android:indeterminateTint="@color/dark_blue"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnGetHashValue"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center"

        android:layout_marginEnd="117dp"
        android:layout_marginBottom="331dp"
        android:background="@drawable/rounded_button1"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:text="@string/get_hash_value"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnOpenHashSolvingActivity"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
android:visibility="invisible"
        android:layout_gravity="center"
        android:layout_marginEnd="117dp"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_button1"
        android:paddingStart="4sp"
        android:paddingEnd="4sp"
        android:text="@string/open_hash_solving"
        android:textColor="@color/white" />
</RelativeLayout>